RESOLVED FIXED 255317
[Cocoa] Fix the WebGPU build
https://bugs.webkit.org/show_bug.cgi?id=255317
Summary [Cocoa] Fix the WebGPU build
Myles C. Maxfield
Reported 2023-04-11 22:09:25 PDT
[Cocoa] Fix the WebGPU build
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-11 22:09:48 PDT
Myles C. Maxfield
Comment 2 2023-04-11 22:11:06 PDT
EWS
Comment 3 2023-04-11 22:13:37 PDT
Committed 262857@main (1ce71bdbf23b): <https://commits.webkit.org/262857@main> Reviewed commits have been landed. Closing PR #12637 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.