[Cocoa] Fix the WebGPU build https://bugs.webkit.org/show_bug.cgi?id=255317 rdar://107920484

Unreviewed build fix.

* Source/WTF/wtf/PlatformUse.h:
* Source/WebGPU/WebGPU/BindGroupLayout.mm:
(WebGPU::createArgumentDescriptor):

Canonical link: https://commits.webkit.org/262857@main